--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,104 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ar.com.tzulberti.archerytraining.MainActivity">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <TableLayout
-        android:stretchColumns="1"
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:padding="3dip"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
-        <TableRow>
-            <TextView
-                android:text="@string/distance"
-                android:padding="3dip" />
-
-            <EditText
-                android:id="@+id/distance"
-                android:gravity="right"
-                android:inputType="number"
-                />
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:text="@string/arrowsAmount"
-                android:padding="3dip" />
-
-            <EditText
-                android:id="@+id/arrowsAmount"
-                android:gravity="right"
-                android:inputType="number"
-                />
-        </TableRow>
-
-
-        <TableRow
-            android:layout_width="match_parent"
-            >
-            <Button
-                android:id="@+id/button"
-                android:layout_width="match_parent"
-                android:onClick="start"
-                android:layout_weight="1"
-                android:text="@string/add"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            >
-            <TextView
-                android:text="@string/lastSerie"
-                android:textAlignment="center"
-                android:layout_weight="1"
-                android:padding="3dip" />
-        </TableRow>
-
-
-        <TableRow>
-            <TextView
-                android:text="@string/distance"
-                android:padding="3dip" />
-            <TextView
-                android:text="@string/arrowsAmountTableHeader"
-                android:padding="3dip" />
-            <TextView
-                android:text="@string/datetime"
-                android:padding="3dip" />
-        </TableRow>
-
-
-        <TableRow>
-            <TextView
-                android:id="@+id/lastDistance"
-                android:padding="3dip" />
-
-            <TextView
-                android:id="@+id/lastArrowsAmount"
-                android:padding="3dip" />
-
-            <TextView
-                android:id="@+id/lastDatetime"
-                android:padding="3dip" />
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:text="@string/todayTotals"
-                android:padding="3dip" />
-
-            <TextView
-                android:id="@+id/todayTotals"
-                android:padding="3dip" />
-        </TableRow>
-    </TableLayout>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
