--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,12 +11,12 @@
         <item
             android:id="@+id/nav_today_raw_data"
             android:title="@string/leftMenuTodayRawData" />
-        <!--
+    </group>
+
+    <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="@string/addSerieDistance" />
-        -->
+            android:id="@+id/nav_retentions"
+            android:title="@string/leftMenuRetentions" />
     </group>
 
     <!--
