Added option to draw on target ahd check score

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,6 +19,12 @@
             android:title="@string/leftMenuRetentions" />
     </group>
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_practice"
+            android:title="@string/leftMenuPratice" />
+    </group>
+
     <!--
     <item android:title="Communicate">
         <menu>
