--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,8 +21,8 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_practice"
-            android:title="@string/leftMenuPratice" />
+            android:id="@+id/nav_tournament"
+            android:title="@string/leftMenuTournament" />
     </group>
 
     <!--
