ISSUE-20: Solve issues when creating tournament information

--- a/app/src/main/res/layout/tournament_add_new.xml
+++ b/app/src/main/res/layout/tournament_add_new.xml
@@ -26,6 +26,7 @@
         <EditText
             android:id="@+id/distance"
             android:gravity="right"
+            android:text="70"
             android:inputType="number" />
     </TableRow>
 
