--- a/app/src/main/res/layout/tournament_view_serie_arrow.xml
+++ b/app/src/main/res/layout/tournament_view_serie_arrow.xml
@@ -133,19 +133,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="@string/tournament_serie_next"/>
+            android:text="@string/tournament_serie_previous"
+            android:id="@+id/btn_serie_previous"/>
 
         <Space
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_weight="1" >
         </Space>
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="@string/tournament_serie_previous"/>
+            android:text="@string/tournament_serie_next"
+            android:id="@+id/btn_serie_next"/>
 
     </LinearLayout>
 
