--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,15 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black">
+    android:orientation="vertical"
     >
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="HOLA MUNDO"
-        android:layout_centerInParent="true" />
+        android:id="@+id/main_activity_today_add_serie"
+        android:text="@string/leftMenuTodayAddSerie"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:textSize="24dp"
+        android:background="@color/colorGrey"
+        android:onClick="goToFragment"
+        android:padding="8dp"/>
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/main_activity_today_view_totals"
+        android:text="@string/leftMenuTodayViewTotals"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:textSize="24dp"
+        android:background="@color/colorGrey"
+        android:onClick="goToFragment"
+        android:padding="8dp"/>
+
+    <TextView
+        android:id="@+id/main_activity_today_raw_data"
+        android:text="@string/leftMenuTodayRawData"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:textSize="24dp"
+        android:background="@color/colorGrey"
+        android:onClick="goToFragment"
+        android:padding="8dp"/>
+
+
+    <TextView
+        android:id="@+id/main_activity_today_retentions"
+        android:text="@string/leftMenuRetentions"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:textSize="24dp"
+        android:background="@color/colorGrey"
+        android:onClick="goToFragment"
+        android:padding="8dp"/>
+
+
+    <TextView
+        android:id="@+id/main_activity_today_tournament"
+        android:text="@string/leftMenuTournament"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:textSize="24dp"
+        android:background="@color/colorGrey"
+        android:onClick="goToFragment"
+        android:padding="8dp"/>
+
+
+
+</LinearLayout>
 
