--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,12 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="common_border_color">#000000</color>
+    <color name="colorGrey">#d9d6db</color>
 
     <!-- Colors used on the retentions options -->
     <color name="colorYellow">#FFFF00</color>
     <color name="colorGreen">#00FF00</color>
     <color name="colorRed">#FF0000</color>
     <color name="colorBlue">#0000FF</color>
+
 </resources>
