--- a/app/src/main/res/layout/retention_exercise.xml
+++ b/app/src/main/res/layout/retention_exercise.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:keepScreenOn="true"
-    android:stretchColumns="*">
+    android:stretchColumns="*"
+    >
 
     <TableRow android:layout_width="match_parent">
 
@@ -73,4 +69,3 @@
             android:layout_span="5" />
     </TableRow>
 </TableLayout>
-</LinearLayout>
