--- a/app/src/main/res/layout/tournament_view_existing.xml
+++ b/app/src/main/res/layout/tournament_view_existing.xml
@@ -19,6 +19,16 @@
         </TableLayout>
     </ScrollView>
 
+
+    <ImageView
+        android:id="@+id/photo_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        />
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
