--- a/app/src/main/res/layout/playoff_view_serie_arrows.xml
+++ b/app/src/main/res/layout/playoff_view_serie_arrows.xml
@@ -157,12 +157,25 @@
             android:onClick="onClick"
             android:text="@string/tournament_serie_previous"
             android:id="@+id/btn_serie_previous"/>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" >
+        </Space>
 
         <Space
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_weight="1" >
         </Space>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/tournament_serie_undo"
+            android:id="@+id/btn_arrow_undo"/>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
