--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,6 +31,12 @@
             android:title="@string/playoff" />
     </group>
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_bow"
+            android:title="@string/bow" />
+    </group>
+
     <!--
     <item android:title="Communicate">
         <menu>
