--- a/app/src/main/res/layout/bow_view_details.xml
+++ b/app/src/main/res/layout/bow_view_details.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/existing_data"
+    android:id="@+id/bow_details"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:stretchColumns="*"
@@ -16,9 +16,27 @@
         <EditText
             android:id="@+id/bow_name"
             android:gravity="right"
-            android:text="70"
             />
     </TableRow>
+
+    <TableLayout
+        android:id="@+id/bow_distances"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:stretchColumns="*">
+
+        <TableRow>
+            <TextView
+                android:text="@string/bow_distance"
+                android:padding="3dip" />
+            <TextView
+                android:text="@string/bow_sight_value"
+                android:padding="3dip" />
+            <TextView
+                android:text="@string/bow_distance_delete"
+                android:padding="3dip" />
+        </TableRow>
+    </TableLayout>
 
 
 
@@ -26,7 +44,7 @@
         android:layout_width="match_parent"
         >
         <Button
-            android:id="@+id/add_distance"
+            android:id="@+id/btn_add_distance"
             android:layout_width="match_parent"
             android:onClick="onClick"
             android:layout_weight="1"
@@ -38,7 +56,7 @@
         android:layout_width="match_parent"
         >
         <Button
-            android:id="@+id/save"
+            android:id="@+id/btn_bow_save"
             android:layout_width="match_parent"
             android:onClick="onClick"
             android:layout_weight="1"
