ISSUE-126: Referenced wrong value

--- a/app/src/main/res/layout/tournament_view_tournament_arrow_stats.xml
+++ b/app/src/main/res/layout/tournament_view_tournament_arrow_stats.xml
@@ -45,7 +45,7 @@
             android:id="@+id/tournament_series_chart"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:layout_below="@id/todayTotalsTextData" />
+            android:layout_below="@id/tournament_stats_table_data" />
 
         <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/tournament_arrows_horizontal_chart"
