ISSUE-144: Added chart based on training type

--- a/app/src/main/res/layout/series_period_data.xml
+++ b/app/src/main/res/layout/series_period_data.xml
@@ -35,5 +35,18 @@
             android:layout_height="wrap_content"
             />
 
+
+        <TextView
+            android:paddingTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/series_by_training_type_chart_description"
+            />
+        <com.github.mikephil.charting.charts.HorizontalBarChart
+            android:id="@+id/series_per_training_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
     </LinearLayout>
 </ScrollView>
