--- a/app/src/main/res/layout/common_view_stats.xml
+++ b/app/src/main/res/layout/common_view_stats.xml
@@ -10,6 +10,29 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp">
+
+            <TableRow>
+                <TextView
+                    android:padding="3dip"
+                    android:text="@string/tournament_type"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content" />
+
+                <Spinner
+                    android:id="@+id/tournament_constrains"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </TableRow>
+        </TableLayout>
+
+
+
 
         <TableLayout
             android:layout_width="match_parent"
