--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -8,18 +7,47 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_main"
+    <Button
+        android:id="@+id/main_activity_series"
+        android:text="@string/series"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:onClick="goToMainOption"
+        />
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+    <Button
+        android:id="@+id/main_activity_today_retentions"
+        android:text="@string/leftMenuRetentions"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:onClick="goToMainOption"
+        />
+
+
+    <Button
+        android:id="@+id/main_activity_today_tournament"
+        android:text="@string/leftMenuTournament"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:onClick="goToMainOption"
+        />
+
+
+    <Button
+        android:id="@+id/main_activity_playoff"
+        android:text="@string/playoff"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:onClick="goToMainOption"
+        />
+
+    <Button
+        android:id="@+id/main_activity_bow"
+        android:text="@string/bow"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:onClick="goToMainOption"
+        />
+
 
 </android.support.v4.widget.DrawerLayout>
