--- a/app/src/main/res/layout/add_serie.xml
+++ b/app/src/main/res/layout/add_serie.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/serie_add_table_layout"
     android:stretchColumns="*">
 
 
