--- a/app/src/main/res/layout/tournament_view_serie_arrow.xml
+++ b/app/src/main/res/layout/tournament_view_serie_arrow.xml
@@ -183,7 +183,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
+            android:onClick="goToPreviousSerie"
             android:text="@string/tournament_serie_previous"
             android:id="@+id/btn_serie_previous"/>
 
@@ -196,7 +196,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
+            android:onClick="undoLastArrow"
             android:text="@string/tournament_serie_undo"
             android:id="@+id/btn_arrow_undo"/>
 
@@ -208,7 +208,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
+            android:onClick="goToNextOrEnd"
             android:text="@string/tournament_serie_next"
             android:id="@+id/btn_serie_next"/>
 
