ISSUE-173: Added options for retentions

--- a/app/src/main/res/layout/retention_configure.xml
+++ b/app/src/main/res/layout/retention_configure.xml
@@ -71,7 +71,7 @@
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
-            android:onClick="onClick"
+            android:onClick="startRetentions"
             android:layout_weight="1"
             android:text="@string/buttonStart"
             />
