--- a/app/src/main/res/layout/retention_exercise.xml
+++ b/app/src/main/res/layout/retention_exercise.xml
@@ -12,7 +12,7 @@
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:onClick="onClick"
+            android:onClick="stop"
             android:text="@string/button_stop" />
     </TableRow>
 
