ISSUE-173: Solve issues with playoff options

--- a/app/src/main/res/layout/playoff_view_serie_arrows.xml
+++ b/app/src/main/res/layout/playoff_view_serie_arrows.xml
@@ -154,7 +154,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
+            android:onClick="goToPreviousSerie"
             android:text="@string/tournament_serie_previous"
             android:id="@+id/btn_serie_previous"/>
         <Space
@@ -172,14 +172,14 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
+            android:onClick="undoLastArrow"
             android:text="@string/tournament_serie_undo"
             android:id="@+id/btn_arrow_undo"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
+            android:onClick="goToNextOrEnd"
             android:text="@string/tournament_serie_next"
             android:id="@+id/btn_serie_next"/>
 
