--- a/app/src/main/res/layout/playoff_add_new.xml
+++ b/app/src/main/res/layout/playoff_add_new.xml
@@ -49,7 +49,7 @@
         <Button
             android:id="@+id/button"
             android:layout_width="match_parent"
-            android:onClick="onClick"
+            android:onClick="addPlayoff"
             android:layout_weight="1"
             android:text="@string/playoff_start"
             />
