ISSUE-222: Added some basic helper buttons on all the options

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -7,7 +7,7 @@
 
     <Button
         android:id="@+id/main_activity_series"
-        android:text="@string/series"
+        android:text="@string/main_series"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:onClick="goToMainOption"
@@ -15,7 +15,7 @@
 
     <Button
         android:id="@+id/main_activity_today_retentions"
-        android:text="@string/leftMenuRetentions"
+        android:text="@string/main_retentions"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:onClick="goToMainOption"
@@ -24,7 +24,7 @@
 
     <Button
         android:id="@+id/main_activity_today_tournament"
-        android:text="@string/leftMenuTournament"
+        android:text="@string/main_tournament"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:onClick="goToMainOption"
@@ -33,7 +33,7 @@
 
     <Button
         android:id="@+id/main_activity_playoff"
-        android:text="@string/playoff"
+        android:text="@string/main_playoff"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:onClick="goToMainOption"
@@ -41,7 +41,7 @@
 
     <Button
         android:id="@+id/main_activity_bow"
-        android:text="@string/bow"
+        android:text="@string/main_bow"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:onClick="goToMainOption"
