--- a/app/src/main/res/layout/common_view_stats.xml
+++ b/app/src/main/res/layout/common_view_stats.xml
@@ -85,5 +85,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
+
+        <TextView
+            android:paddingTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/stats_colors_stats"
+            />
+        <com.github.mikephil.charting.charts.HorizontalBarChart
+            android:id="@+id/playoff_stats_color_stats"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            />
     </LinearLayout>
 </ScrollView>
