ISSUE-260: Submit form on mark as done

--- a/app/src/main/res/layout/series_add.xml
+++ b/app/src/main/res/layout/series_add.xml
@@ -28,14 +28,15 @@
         <EditText
             android:id="@+id/arrowsAmount"
             android:gravity="right"
-            android:inputType="number" />
+            android:inputType="number"
+            android:imeOptions="actionDone" />
     </TableRow>
 
 
     <TableRow android:layout_width="match_parent">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/addNewSerie"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:onClick="addNewSerie"
