--- a/app/src/main/res/layout/common_view_container_arrow_stats.xml
+++ b/app/src/main/res/layout/common_view_container_arrow_stats.xml
@@ -16,21 +16,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.appyvet.materialrangebar.RangeBar
+            android:id="@+id/tournament_series_rangebar"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="20sp">
+            />
 
-            <com.edmodo.rangebar.RangeBar
-                xmlns:custom="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/tournament_series_rangebar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                custom:tickCount="5"
-                />
-        </LinearLayout>
 
         <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/tournament_stats_table_data"
