--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -47,6 +47,14 @@
         android:onClick="goToMainOption"
         />
 
+    <Button
+        android:id="@+id/main_activity_timer"
+        android:text="@string/main_timer"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:onClick="goToMainOption"
+        />
+
 
 
 </LinearLayout>
